--- a/Sprint1/Sprint1.2/index.html
+++ b/Sprint1/Sprint1.2/index.html
@@ -392,8 +392,7 @@
 
 </div>
 
-
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
         (function () {
             'use strict'
