--- a/Sprint1/Sprint1.2/index.html
+++ b/Sprint1/Sprint1.2/index.html
@@ -344,12 +344,12 @@
             <!-- Cierre de container-->
         </div>
 
-        <div class="azul row d-flex  justify-content-center flex-column ">
+        <div class="azul row d-flex  justify-content-center align-content-center flex-column align-content-center">
             <div class="col-12 col-md-4 text-center mt-4 mx-auto"><small>35,000+ ALREADY JOINED</small>
                 <br>
                 <h5 class="mt-3">Stay up-to-date with what <br>we're doing</h5>
             </div>
-            <form class="row g-3 d-flex flex-column flex-md-row justify-content-center align-content-center mb-5 needs-validation" novalidate>
+            <form class="formulario row g-3 d-flex flex-column align-content-center  justify-content-center flex-md-row justify-content-center align-content-center mb-5  needs-validation" novalidate>
                 <div class="col-auto position-relative">
                     <label class="visually-hidden">Email</label>
                     <input type="email" class="form-control " id="email" placeholder="Enter your email address "
